--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@reduxjs/toolkit": "^2.5.0",
     "aos": "^2.3.4",
     "axios": "^1.7.8",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.17.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.2.0",
